fixing gap in stacked tiles

--- a/portfolio2.css
+++ b/portfolio2.css
@@ -49,7 +49,7 @@ p {
 	float:left;
 	position:relative;
 	width:277.25px;
-	margin-bottom:5px;
+	margin-bottom:1px;
 }
 
 .tile_stack_photo {
